--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Lobby -->
     <div class="lobby" id="lobby">
       <h1>Puzzle Gambar 3x3</h1>
+      <h4>Creator Abu Kentucky</h4>
       <button id="playBtn">▶ Play</button>
     </div>
 
