--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <div class="container">
     <!-- Lobby -->
     <div class="lobby" id="lobby">
-       <img src="img/lobby-image.png" alt="Lobby Image" style="width: 150px; margin-bottom: 1rem;" />
-      <h1>Puzzle Gambar 3x3</h1>
+       <img src="img/lobby-image.png" alt="Lobby Image" style="width: 150px; margin-bottom: 1rem; box-shadow: none !important;" />
       <h4>Creator Abu Kentucky</h4>
       <button id="playBtn">▶ Play</button>
     </div>
