--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Lobby -->
     <div class="lobby" id="lobby">
        <img src="img/lobby-image.png" alt="Lobby Image" style="width: 150px; margin-bottom: 1rem; box-shadow: none !important;" />
+      <h1>Puzzle gambar 3x3</h1>
       <h4>Creator Abu Kentucky</h4>
       <button id="playBtn">▶ Play</button>
     </div>
